--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -2,7 +2,7 @@ name: Lambda update
 
 on: 
   push:
-    branches: ["main", "lambda"]
+    branches: ["lambda"]
 
 jobs:
   aws: 
@@ -15,7 +15,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/<ROLE_NAME>
+          role-to-assume: arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{vars.OIDC_IAM_ROLE}}
           aws-region: ap-southeast-1
 
       - name: Verify AWS identity
