--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -9,7 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  aws: 
+  aws:
+    environment: iwgh
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +20,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{vars.OIDC_IAM_ROLE}}
+          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.OIDC_IAM_ROLE }}
           aws-region: ap-southeast-1
 
       - name: Verify AWS identity
