--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/${{ vars.OIDC_IAM_ROLE }}
+          role-to-assume: ${{ vars.OIDC_IAM_ROLE }}
           aws-region: ap-southeast-1
 
       - name: Verify AWS identity
