--- a/.github/workflows/test_oidc.yml
+++ b/.github/workflows/test_oidc.yml
@@ -15,18 +15,17 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+      
+      - name: Debug role ARN
+        run: echo "AWS_ROLE_ARN=${{ vars.OIDC_IAM_ROLE_ARN }}"
 
-      - name: Debug OIDC
-        run: |
-            echo "AWS_ROLE_ARN=${{ vars.OIDC_IAM_ROLE_ARN }}"
-            aws sts get-caller-identity || echo "Failed to assume role"
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ vars.OIDC_IAM_ROLE_ARN }}   # Full role ARN
           aws-region: ap-southeast-1
-
+        
       - name: Verify AWS identity
         run: |
           echo "Checking assumed role identity..."
