--- a/.github/workflows/test_oidc.yml
+++ b/.github/workflows/test_oidc.yml
@@ -25,8 +25,26 @@ jobs:
         with:
           role-to-assume: ${{ vars.OIDC_IAM_ROLE_ARN }}   # Full role ARN
           aws-region: ap-southeast-1
+
         
       - name: Verify AWS identity
         run: |
           echo "Checking assumed role identity..."
           aws sts get-caller-identity
+
+
+      - name: Decode OIDC token and print sub
+        run: |
+          # Get the OIDC token
+          TOKEN=$ACTIONS_ID_TOKEN_REQUEST_TOKEN
+
+          # Extract the payload (second part of JWT)
+          PAYLOAD=$(echo $TOKEN | cut -d '.' -f2)
+
+          # Add padding for base64 decoding
+          LEN=$((${#PAYLOAD} % 4))
+          if [ $LEN -eq 2 ]; then PAYLOAD="${PAYLOAD}=="; fi
+          if [ $LEN -eq 3 ]; then PAYLOAD="${PAYLOAD}="; fi
+
+          # Decode and print only 'sub'
+          echo $PAYLOAD | base64 --decode | jq -r '.sub'
