--- a/.github/workflows/test_oidc.yml
+++ b/.github/workflows/test_oidc.yml
@@ -15,34 +15,17 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      
+
       - name: Debug role ARN
         run: echo "AWS_ROLE_ARN=${{ vars.OIDC_IAM_ROLE_ARN }}"
 
-
-      - name: Get OIDC token
-        id: get-token
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-            role-to-assume: ${{ vars.OIDC_IAM_ROLE_ARN }}
-            aws-region: ap-southeast-1
-            output-env-credentials: true
+          role-to-assume: ${{ vars.OIDC_IAM_ROLE_ARN }}
+          aws-region: ap-southeast-1
 
-      - name: Print OIDC sub
+      - name: Verify AWS identity
         run: |
-            TOKEN="${{ steps.get-token.outputs.id_token }}"
-
-            # Extract the payload (second part of JWT)
-            PAYLOAD=$(echo $TOKEN | cut -d '.' -f2)
-
-            # Convert URL-safe base64 to standard base64
-            PAYLOAD=$(echo $PAYLOAD | tr '_-' '/+')
-
-            # Add padding for base64 decoding
-            MOD=$((${#PAYLOAD} % 4))
-            if [ $MOD -eq 2 ]; then PAYLOAD="${PAYLOAD}=="; fi
-            if [ $MOD -eq 3 ]; then PAYLOAD="${PAYLOAD}="; fi
-            if [ $MOD -eq 1 ]; then PAYLOAD="${PAYLOAD}==="; fi
-
-            # Decode and print only 'sub'
-            echo $PAYLOAD | base64 --decode | jq -r '.sub'
+          echo "Checking assumed role identity..."
+          aws sts get-caller-identity
