--- a/.github/workflows/test_oidc.yml
+++ b/.github/workflows/test_oidc.yml
@@ -7,21 +7,27 @@ permissions:
   id-token: write
   contents: read
 
+env:
+  OIDC_IAM_ROLE_ARN: arn:aws:iam::690695877407:role/iam-role-iwgh-lambda-update
+
 jobs:
   get-oidc-token:
-    environment: iwgh
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.OIDC_IAM_ROLE_ARN }}
+          role-to-assume: $OIDC_IAM_ROLE_ARN
           aws-region: us-east-1
           role-session-name: github-actions
+
+      - name: Print branch
+        run: |
+          echo "branch: $GITHUB_REF"
 
       - name: Request OIDC token
         id: oidc
