--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # fetch full history for git diff
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
@@ -24,11 +26,23 @@ jobs:
 
       - name: Verify AWS identity
         run: aws sts get-caller-identity
-      
+
+      - name: Fetch infra branch for diff
+        run: git fetch origin infra
+
       - name: Check if reminder file updated
         id: check_reminder_changed
         run: |
-          if git diff --name-only HEAD~1 HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src'; then
+          if git diff --name-only origin/infra...HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Check if subscription file updated
+        id: check_subscription_changed
+        run: |
+          if git diff --name-only origin/infra...HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src'; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -42,15 +56,6 @@ jobs:
           aws lambda update-function-code \
             --function-name iwgh-lambda-reminders \
             --zip-file fileb://iwgh-lambda-reminders.zip
-
-      - name: Check if subscription file updated
-        id: check_subscription_changed
-        run: |
-          if git diff --name-only HEAD~1 HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src'; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
 
       - name: Update Subscription Lambda
         if: steps.check_subscription_changed.outputs.changed == 'true'
