--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -27,22 +27,10 @@ jobs:
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
-      - name: Fetch infra branch for diff
-        run: git fetch origin infra
-
       - name: Check if reminder file updated
         id: check_reminder_changed
         run: |
-          if git diff --name-only origin/infra...HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src'; then
-            echo "changed=true" >> $GITHUB_OUTPUT
-          else
-            echo "changed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Check if subscription file updated
-        id: check_subscription_changed
-        run: |
-          if git diff --name-only origin/infra...HEAD | grep -q '^iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src'; then
+          if git diff --name-only origin/infra -- iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src/ | grep -q .; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -56,6 +44,15 @@ jobs:
           aws lambda update-function-code \
             --function-name iwgh-lambda-reminders \
             --zip-file fileb://iwgh-lambda-reminders.zip
+
+      - name: Check if subscription file updated
+        id: check_subscription_changed
+        run: |
+          if git diff --name-only origin/infra -- iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src/ | grep -q .; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Update Subscription Lambda
         if: steps.check_subscription_changed.outputs.changed == 'true'
