--- a/.github/workflows/lambda-update.yml
+++ b/.github/workflows/lambda-update.yml
@@ -41,12 +41,13 @@ jobs:
         id: check_reminder_changed
         run: |
           changed=false
-          # Check if any files in the directory have changed compared to origin/infra
-          if [ -n "$(git diff --name-only origin/infra -- iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src/)" ]; then
+          # Compare the last commit with the previous commit
+          if [ -n "$(git diff HEAD~1 HEAD -- iwgh/ap-southeast-1/iwgh-lambda-reminder/lambda/src/)" ]; then
             changed=true
           fi
           echo "changed=$changed" >> $GITHUB_OUTPUT
           echo "Reminder changed: $changed"
+
 
       - name: Update Reminder Lambda
         if: steps.check_reminder_changed.outputs.changed == 'true'
@@ -71,11 +72,12 @@ jobs:
         id: check_subscription_changed
         run: |
           changed=false
-          if [ -n "$(git diff --name-only origin/infra -- iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src/)" ]; then
+          if [ -n "$(git diff HEAD~1 HEAD -- iwgh/ap-southeast-1/iwgh-lambda-subscription/lambda/src/)" ]; then
             changed=true
           fi
           echo "changed=$changed" >> $GITHUB_OUTPUT
           echo "Subscription changed: $changed"
+
 
       - name: Update Subscription Lambda
         if: steps.check_subscription_changed.outputs.changed == 'true'
